<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>eu.dunderburken</groupId>
  <artifactId>jshell-maven-plugin</artifactId>
  <packaging>maven-plugin</packaging>
  <version>1.0-SNAPSHOT</version>

  <name>jshell-maven-plugin</name>
  <description>Run JShell from your project with the project class path and configure JShell flags.</description>
  <url>https://github.com/entilldaniel/jshell-maven-plugin</url>
  <inceptionYear>2026</inceptionYear>
  <scm>
	<connection>scm:git:ssh://github.com/entilldaniel/jshell-maven-plugin.git</connection>
  </scm>
  <properties>
	<maven.compiler.release>11</maven.compiler.release>
	<maven.compiler.target>11</maven.compiler.target>
	<maven.compiler.source>11</maven.compiler.source>
	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	<maven-plugin-tools.version>3.15.2</maven-plugin-tools.version>
	<maven.version>3.9.0</maven.version>
  </properties>
  
  <dependencies>
	<dependency>
      <groupId>org.apache.maven</groupId>
      <artifactId>maven-plugin-api</artifactId>
      <version>${maven.version}</version>
      <scope>provided</scope>
    </dependency>

	<dependency>
      <groupId>org.apache.maven</groupId>
      <artifactId>maven-core</artifactId>
      <version>${maven.version}</version>
      <scope>provided</scope>
    </dependency>
	
    <dependency>
      <groupId>org.apache.maven.plugin-tools</groupId>
      <artifactId>maven-plugin-annotations</artifactId>
      <version>${maven-plugin-tools.version}</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <build>
	<pluginManagement>
	  <plugins>
		<plugin>
		  <groupId>org.apache.maven.plugins</groupId>
		  <artifactId>maven-plugin-plugin</artifactId>
          <version>${maven-plugin-tools.version}</version>
          <executions>
            <execution>
              <id>help-mojo</id>
              <goals>
                <goal>helpmojo</goal>
              </goals>
            </execution>
          </executions>
		</plugin>
		<plugin>
		  <groupId>org.apache.maven.plugins</groupId>
		  <artifactId>maven-javadoc-plugin</artifactId>
		  <version>3.6.3</version>
		  <executions>
			<execution>
			  <goals>
				<goal>jar</goal>
			  </goals>
			</execution>
		  </executions>
		</plugin>


		
		<plugin>
          <groupId>eu.dunderburken</groupId>
          <artifactId>jshell-maven-plugin</artifactId>
          <version>1.0-SNAPSHOT</version>
		  <configuration>
			<enablePreview>true</enablePreview>
			<feedback>verbose</feedback>
			<loadFiles>
			  <item>JAVASE</item>
			  <item>PRINTING</item>
			</loadFiles>
			<compilerFlags>
			  <flag>-g:source</flag>
			</compilerFlags>
			<runtimeFlags>
			  <flag>-Xms128m</flag>
			</runtimeFlags>
		  </configuration>
        </plugin>
	  </plugins>
	</pluginManagement>
  </build>

  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-plugin-report-plugin</artifactId>
        <version>3.15.2</version>
      </plugin>
    </plugins>
  </reporting>
  
</project>

